fix misaligned footer icons

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -57,6 +57,7 @@ section#contact {
     .contact-address-icon{
       padding-right: 30px;
       color: rgb(0, 213, 64);
+      line-height: normal;
     }
   }
   .contact-timetable{
