--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -28,7 +28,7 @@ ul.social-buttons {
   li {
     a {
       font-size: 20px;
-      line-height: 50px;
+      line-height: normal;
       display: block;
       width: 50px;
       height: 50px;
